fixed 1px gap between .works and .works::after on tablet resolution in photo.html

--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -14,7 +14,7 @@
         height: 0;
 
         position: absolute;
-        bottom: -34px;
+        bottom: -33px;
         left: 0;
 
         border: 160px solid transparent;
